--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url('path-to-your-image');
+  background-image: Backpho.png;
   background-attachment: fixed;
   background-size: cover;
   background-repeat: no-repeat;
