--- a/styles.css
+++ b/styles.css
@@ -5,3 +5,8 @@ body {
   background-repeat: no-repeat;
   background-position: center;
 }
+main {
+  background-color: rgba(255, 255, 255, 0.8);
+  padding: 20px;
+  border-radius: 10px;
+}
