--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,15 +1,13 @@
-/* Style the navigation bar */
+/* Example CSS to turn menu links into buttons */
 nav ul {
-  list-style: none;
+  list-style-type: none;
   padding: 0;
   margin: 0;
-  display: flex;
-  justify-content: space-between;
 }
 
 nav ul li {
   display: inline-block;
-  margin-right: 15px;
+  margin-right: 10px;
 }
 
 nav ul li a {
@@ -19,20 +17,8 @@ nav ul li a {
   color: white;
   border-radius: 5px;
   text-decoration: none;
-  font-weight: bold;
 }
 
 nav ul li a:hover {
   background-color: #005f99; /* Hover effect */
-}
-
-@media (max-width: 768px) {
-  nav ul {
-    flex-direction: column;
-    align-items: center;
-  }
-
-  nav ul li {
-    margin-bottom: 10px;
-  }
 }
