--- a/layout/default.html
+++ b/layout/default.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>{{ page.title }}</title>
-  <link rel="stylesheet" href="https://github.com/Bharathi-Thiruvengadam/Homepage/blob/f13e4decda3989b8cb92c0791a1b1dc8b4d8351e/style.css">
+  <link rel="stylesheet" href="https://github.com/bharathit-math/Home/blob/f13e4decda3989b8cb92c0791a1b1dc8b4d8351e/style.css">
 </head>
 <body>
   <header>
@@ -12,13 +12,13 @@
       <div class="logo">Bharathi's Homepage</div>
       <button class="menu-toggle" aria-label="Menu">☰</button>
       <ul class="nav-links">
-        <li><a href="https://bharathi-thiruvengadam.github.io/Homepage/">Home</a></li>
-        <li><a href="https://bharathi-thiruvengadam.github.io/Homepage/about/">About Me</a></li>
-        <li><a href="https://bharathi-thiruvengadam.github.io/Homepage/teaching/">Teaching</a></li>
-        <li><a href="https://bharathi-thiruvengadam.github.io/Homepage/event/">Event</a></li>
-         <li><a href="https://bharathi-thiruvengadam.github.io/Homepage/activities/">Activities</a></li>
-         <li><a href="https://bharathi-thiruvengadam.github.io/Homepage/gallery/">Gallery</a></li>
-         <li><a href="https://bharathi-thiruvengadam.github.io/Homepage/research/">Research</a></li>
+        <li><a href="https://bharathit-math.github.io/Home/">Home</a></li>
+        <li><a href="https://bharathit-math.github.io/Home/about/">About Me</a></li>
+        <li><a href="https://bharathit-math.github.io/Home/teaching/">Teaching</a></li>
+        <li><a href="https://bharathit-math.github.io/Home/event/">Event</a></li>
+         <li><a href="https://bharathit-math.github.io/Home/activities/">Activities</a></li>
+         <li><a href="https://bharathit-math.github.io/Home/gallery/">Gallery</a></li>
+         <li><a href="https://bharathit-math.github.io/Home/research/">Research</a></li>
       </ul>
     </nav>
   </header>
