--- a/style.css
+++ b/style.css
@@ -20,5 +20,5 @@ nav ul li a {
 }
 
 nav ul li a:hover {
-  background-color: #005f99; /* Hover effect */
+  background-color: white; /* Hover effect */
 }
