--- a/layout/default.html
+++ b/layout/default.html
@@ -9,7 +9,7 @@
 
 
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" class="stylesheet">
+    <link rel="stylesheet" href="https://github.com/bharathit-math/Home/blob/206ead9faaa693756b324ec1bbecbf1e9cf1d432/style.css" class="stylesheet">
 </head> 
 
 <body>
