--- a/layout/default.html
+++ b/layout/default.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bharathi's Homepage</title>
-    <link rel="icon" href="https://i.ibb.co/zRsTj3p/Frame-1-37.png">
+    <link rel="icon" href="pho.png">
 
 
     <link rel="stylesheet" href="style.css">
@@ -20,7 +20,7 @@
             <div class="header">
                
                 <a href="" class="logo">
-                    <img src="files/signaturecropped.png" alt="" class="signature">
+                    <img src="Backpho.png" alt="" class="signature">
                     <i class="fa fa-bolt"></i>
                 </a>
                    
