--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,8 +6,8 @@
     <link rel="icon" href="pho.png">
 
 
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://github.com/bharathit-math/Home/blob/206ead9faaa693756b324ec1bbecbf1e9cf1d432/style.css" class="stylesheet">
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://github.com/bharathit-math/Home/blob/65c08ee85db258aefc7bda1d044658c7998d5ceb/styles.css" class="stylesheet">
 </head> 
 
 
