--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,4 +14,6 @@
                     <li><a href="teaching">Teaching</a></li>
                     <li><a href="research">Research</a></li>
                     <li><a href="event">Events</a></li>
+                    <li><a href="activities">Activities</a></li>
+      <li><a href="gallery">Gallery</a></li>
                 </ul>
