--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,1 +1,8 @@
 
+<nav>
+  <ul>
+    <li><a class="menu-button" href="/">Home</a></li>
+    <li><a class="menu-button" href="/button1">Button 1</a></li>
+    <li><a class="menu-button" href="/button2">Button 2</a></li>
+  </ul>
+</nav>
