--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,8 +1,22 @@
-
-<nav>
-  <ul>
-    <li><a class="menu-button" href="/">Home</a></li>
-    <li><a class="menu-button" href="/button1">Button 1</a></li>
-    <li><a class="menu-button" href="/button2">Button 2</a></li>
-  </ul>
-</nav>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN"
+  "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
+<head>
+<meta name="generator" content="jemdoc, see http://jemdoc.jaboc.net/" />
+<meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
+<link rel="stylesheet" href="jemdoc.css" type="text/css" />
+<title>Etana Fikadu</title>
+</head>
+<body>
+<div id="fwtitle">
+<div id="toptitle">
+<h1>Etana Fikadu</h1>
+</div>
+</div>
+<table summary="Table for page layout." id="tlayout">
+<tr valign="top">
+<td id="layout-menu">
+<div class="menu-item"><a href="index.html" class="current"><button>Home</button></a></div>
+<div class="menu-item"><a href="pub.html"><button>Publications</button></a></div>
+<div class="menu-item"><a href="publication.html"><button>Com.service</button></a></div>
+<div class="menu-item"><a href="teaching.html"><button>Teaching Exp.</button></a></div>
