--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,19 +4,19 @@
 <head>
 <meta name="generator" content="jemdoc, see http://jemdoc.jaboc.net/" />
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
-<link rel="stylesheet" href="jemdoc.css" type="text/css" />
-<title>Etana Fikadu</title>
+<link rel="stylesheet" href="style.css"/>
+<title>Bharathi's Homepage</title>
 </head>
 <body>
 <div id="fwtitle">
 <div id="toptitle">
-<h1>Etana Fikadu</h1>
+
 </div>
 </div>
 <table summary="Table for page layout." id="tlayout">
 <tr valign="top">
 <td id="layout-menu">
-<div class="menu-item"><a href="index.html" class="current"><button>Home</button></a></div>
+<div class="menu-item"><a href="index" class="current"><button>Home</button></a></div>
 <div class="menu-item"><a href="pub.html"><button>Publications</button></a></div>
 <div class="menu-item"><a href="publication.html"><button>Com.service</button></a></div>
 <div class="menu-item"><a href="teaching.html"><button>Teaching Exp.</button></a></div>
