--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,11 +10,11 @@
   <header>
     <nav>
       <ul>
-        <li><a href="{{ '/' | relative_url }}">Home</a></li>
-        <li><a href="{{ '/about' | relative_url }}">About Me</a></li>
-        <li><a href="{{ '/publications' | relative_url }}">Publications</a></li>
-        <li><a href="{{ '/blog' | relative_url }}">Blog</a></li>
-        <li><a href="{{ '/contact' | relative_url }}">Contact</a></li>
+        <li><a href="index">Home</a></li>
+        <li><a href="about">About Me</a></li>
+        <li><a href="teaching">Publications</a></li>
+        <li><a href="research">Blog</a></li>
+        <li><a href="event">Event</a></li>
       </ul>
     </nav>
   </header>
