--- a/style.css
+++ b/style.css
@@ -1,8 +1,7 @@
-/* Example CSS to turn menu links into buttons */
+/* Basic button styling for the navigation links */
 nav ul {
   list-style-type: none;
   padding: 0;
-  margin: 0;
 }
 
 nav ul li {
@@ -13,12 +12,12 @@ nav ul li {
 nav ul li a {
   display: inline-block;
   padding: 10px 20px;
-  background-color: #007acc; /* Button color */
+  background-color: #007acc;
   color: white;
   border-radius: 5px;
   text-decoration: none;
 }
 
 nav ul li a:hover {
-  background-color: #005f99; /* Hover effect */
+  background-color: #005f99;
 }
