--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,8 +12,8 @@
       <ul>
         <li><a href="index">Home</a></li>
         <li><a href="about">About Me</a></li>
-        <li><a href="teaching">Publications</a></li>
-        <li><a href="research">Blog</a></li>
+        <li><a href="teaching">Teaching</a></li>
+        <li><a href="research">Research</a></li>
         <li><a href="event">Event</a></li>
       </ul>
     </nav>
@@ -24,7 +24,7 @@
   </main>
 
   <footer>
-    <p>&copy; {{ site.time | date: '%Y' }} My PhD Site</p>
+    <p>&copy; {{ site.time | date: '%Y' }} Bharathi's Homepage</p>
   </footer>
 </body>
 </html>
