--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,8 +14,8 @@
       <ul class="nav-links">
         <li><a href="{{ site.baseurl }}/">Home</a></li>
         <li><a href="{{ site.baseurl }}/about/">About</a></li>
-        <li><a href="{{ site.baseurl }}/contact/">Contact</a></li>
-        <li><a href="{{ site.baseurl }}/projects/">Projects</a></li>
+        <li><a href="{{ site.baseurl }}/teaching/">Teaching</a></li>
+        <li><a href="{{ site.baseurl }}/research/">Research</a></li>
       </ul>
     </nav>
   </header>
