--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,9 +13,9 @@
       <button class="menu-toggle" aria-label="Menu">☰</button>
       <ul class="nav-links">
         <li><a href="{{ site.baseurl }}/">Home</a></li>
-        <li><a href="{{ site.baseurl }}/about/">About</a></li>
-        <li><a href="{{ site.baseurl }}/teaching/">Teaching</a></li>
-        <li><a href="{{ site.baseurl }}/research/">Research</a></li>
+        <li><a href="about">About</a></li>
+        <li><a href="teaching">Teaching</a></li>
+        <li><a href="research">Research</a></li>
       </ul>
     </nav>
   </header>
