--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,11 +5,11 @@
 
 {% seo %}
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link rel="preload" href="" as="style" type="style.css" crossorigin>
+    <link rel="preload" href="https://github.com/bharathit-math/Home/blob/ccb06f57e8d60f06a899525b85bccd678d9dcf89/style.css" as="style" type="style.css" crossorigin>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#157878">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
+    <link rel="stylesheet" href="style.css">
     {% include head-custom.html %}
   </head>
   <body>
