--- a/style.css
+++ b/style.css
@@ -1,4 +1,7 @@
 /* Example CSS to turn menu links into buttons */
+body {
+    font-size: 20px; /* Adjust as needed */
+}
 nav ul {
   list-style-type: none;
   padding: 0;
