--- a/style.scss
+++ b/style.scss
@@ -1,8 +1,12 @@
 /* Example CSS to turn menu links into buttons */
 
 body {
-  ...
-  font: 10px/1.4 $helvetica;
+  padding: 0;
+  margin: 0;
+  font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 16px;
+  line-height: 1.5;
+  color: $body-text-color;
 }
 
 nav ul {
